Misc enhancements
Some syntax fixes for readability. Remove unused code. etc